adding notifications and rearranged docs

--- a/docs/Settings.mdx
+++ b/docs/Settings.mdx
@@ -76,7 +76,7 @@ Here's a simple table to help you understand the types:
 | Enabled | Boolean | false | Enables/Disables rank sticks. | ✔ |
 | MinRank | Number | 255 | The minimum rank required to use rank sticks. | ✔ |
 | MaxRank | Number | 255 | The maximum rank required to use rank sticks. | ✔ |
-| sticksModel | Model | Tool? | The model/tool to use as the rank sticks. | ✔ |
+| sticksModel | Model | Tool? | The model/tool to use as the rank sticks. (Optional) | ✔ |
 
 ## Notifications
 | Setting Name | Type | Default Value | Description | Working? |
