feat: added blacklists & changed docs

--- a/docs/Centers/Application Center.mdx
+++ b/docs/Centers/Application Center.mdx
@@ -7,4 +7,4 @@ To use the rank center, you need to ensure you publish the game and that you hav
 <img src="/VibezAPI/allowThirdPartyTeleports.png"></img>
 
 ### Configuration
-Placeholder
+Coming soon...
