--- a/docs/Settings.mdx
+++ b/docs/Settings.mdx
@@ -12,7 +12,7 @@ Our first version of settings were... Well, clunky and messy to say the least. S
 
 <iframe src="https://discord.com/widget?id=528920896497516554&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 
-<h2>Example</h2>
+## Example Usage
 
 ```lua
 local Vibez = require(14946453963)("API KEY", {
@@ -30,19 +30,22 @@ local Vibez = require(14946453963)("API KEY", {
 })
 ```
 
-<h2>Types</h2>
+## Recommened Settings
 
-Here's a simple table to help you understand the types:
+<h3>Here's a simple table to help you understand the types:</h3>
 
 |       Type        |               Example               |
 |:-----------------:|:-----------------------------------:|
 |      Boolean      |         `true` OR `false`           |
-|      String       | `"Text"` OR `'Text'` OR `\`Text`\`  |
+|      String       | `"Text"` OR `'Text'` OR `` `Text` ``  |
 |      Number       | `-2,147,483,647` TO `2,147,483,647` |
 |    Array | `{1, 2, 3}` OR `{"A", "B", "C"}` |
 | Array <br/> Example | <ul><li>String&lt;whatYoureChanging&gt; → "Example"</li><li>Array&lt;String&lt;Something&gt;&gt; → `{"Something1", "Something2", "Something2"}`</li></ul> |
 
-## Commands
+<details>
+<summary>Commands</summary>
+<br />
+
 | Setting Name | Type | Default Value | Description | Working? |
 |:---------:|:---------:|:---------:|:---------:|:---------:|
 | Enabled | Boolean | false | Enables/Disables chat commands. | ✔ |
@@ -52,7 +55,12 @@ Here's a simple table to help you understand the types:
 | MaxRank | Number | 255 | The maximum rank required to use chat commands. | ✔ |
 | Alias | Array&lt;\{String&lt;commandName&gt;, String&lt;commandAlias&gt;\}&gt; | {} | The aliases for chat commands. | ✔ |
 
-## ActivityTracker
+</details>
+
+<details>
+<summary>ActivityTracker</summary>
+<br />
+
 | Setting Name | Type | Default Value | Description | Working? |
 |:---------:|:---------:|:---------:|:---------:|:---------:|
 | Enabled | Boolean | false | Enables/Disables the activity tracker. | ✔ |
@@ -63,14 +71,24 @@ Here's a simple table to help you understand the types:
 | kickIfFails | Boolean | false | Kicks players if the activity tracker fails to initialize. | ✔ |
 | failMessage | String | We were unable to initialize the activity tracker for you. Please rejoin the game. | The message sent when the activity tracker fails to initialize. | ✔ |
 
-## Interface
+</details>
+
+<details>
+<summary>Interface</summary>
+<br />
+
 | Setting Name | Type | Default Value | Description | Working? |
 |:---------:|:---------:|:---------:|:---------:|:---------:|
 | Enabled | Boolean | false | Enables/Disables the interface. | ✔ |
 | MinRank | Number | 255 | The minimum rank required to use the interface. | ✔ |
 | MaxRank | Number | 255 | The maximum rank required to use the interface. | ✔ |
 
-## RankSticks
+</details>
+
+<details>
+<summary>RankSticks</summary>
+<br />
+
 | Setting Name | Type | Default Value | Description | Working? |
 |:---------:|:---------:|:---------:|:---------:|:---------:|
 | Enabled | Boolean | false | Enables/Disables rank sticks. | ✔ |
@@ -78,13 +96,39 @@ Here's a simple table to help you understand the types:
 | MaxRank | Number | 255 | The maximum rank required to use rank sticks. | ✔ |
 | sticksModel | Model | Tool? | The model/tool to use as the rank sticks. (Optional) | ✔ |
 
-## Notifications
+</details>
+
+<details>
+<summary>Notifications</summary>
+<br />
+
 | Setting Name | Type | Default Value | Description | Working? |
 |:---------:|:---------:|:---------:|:---------:|:---------:|
-| Enabled | Boolean | false | Enables/Disables notifications. | ❌ |
-| Position | String | Bottom-Right | The position of the notifications. | ❌ |
+| Enabled | Boolean | false | Enables/Disables notifications. | ✔ |
+| Font | String | Gotham | The font of the notifications. | ✔ |
+| FontSize | Number | 16 | The size of the content with notifications (Use sizes for mobile). | ✔ |
+| keyboardFontSizeMultiplier | Number | 1.25 | The multiplier for keyboard users. | ✔ |
+| delayUntilRemoval | Number | 20 | The amount of seconds each notification is shown for. | ✔ |
+| entranceTweenInfo | Array&lt;\{String&lt;Style&gt;, String&lt;Direction&gt;, Number&lt;timeItTakes&gt;\}&gt; | `{Style="Quint", Direction="InOut", timeItTakes=1}` | The information of the tween that plays when a new notification appears. | ✔ |
+| exitTweenInfo | Array&lt;\{String&lt;Style&gt;, String&lt;Direction&gt;, Number&lt;timeItTakes&gt;\}&gt; | `{Style="Quint", Direction="InOut", timeItTakes=1}` | The information of the tween that plays when a notification needs to be deleted. | ✔ |
 
-## Misc
+</details>
+
+<details>
+<summary>Blacklists</summary>
+<br />
+
+| Setting Name | Type | Default Value | Description | Working? |
+|:---------:|:---------:|:---------:|:---------:|:---------:|
+| Enabled | Boolean | false | Enables/Disables whether blacklists will be kicked upon joining. | ✔ |
+| userIsBlacklistedMessage | String | You have been blacklisted from the game for: &lt;BLACKLIST_REASON&gt; | The kick message presented to the user who's blacklisted. | ✔ |
+
+</details>
+
+<details>
+<summary>Misc</summary>
+<br />
+
 | Setting Name | Type | Default Value | Description | Working? |
 |:---------:|:---------:|:---------:|:---------:|:---------:|
 | originLoggerText | String | Game | The text used in the origin logger. | ✔ |
@@ -92,7 +136,8 @@ Here's a simple table to help you understand the types:
 | ignoreWarnings | Boolean | false | Ignores warnings. | ✔ |
 | overrideGroupCheckForStudio | Boolean | false | Overrides the group check for studio. | ✔ |
 | isAsync | Boolean | false | Toggles whether upon initialization should yield the current thread or not. | ✔ |
-| usePromises | Boolean | false | Toggles whether to use promises or not. (Long term project) | ❌ |
+
+</details>
 
 ## Legacy Settings (To Be Removed)
 These are settings that were available in a previous version, and are now removed. They still work, but you'll receive a warning to switch to the new settings.
