feat: added 'createGlobalVariables' setting

--- a/docs/Settings.mdx
+++ b/docs/Settings.mdx
@@ -136,6 +136,7 @@ local Vibez = require(14946453963)("API KEY", {
 | ignoreWarnings | Boolean | false | Ignores warnings. | ✔ |
 | overrideGroupCheckForStudio | Boolean | false | Overrides the group check for studio. | ✔ |
 | isAsync | Boolean | false | Toggles whether upon initialization should yield the current thread or not. | ✔ |
+| createGlobalVariables | Boolean | false | Toggles whether upon initialization should the module create \_G variables to use. | ✔ |
 
 </details>
 
