--- a/docs/Centers/Application Center.mdx
+++ b/docs/Centers/Application Center.mdx
@@ -1,5 +1,9 @@
+---
+sidebar_position: 1
+---
+
 ## Implementation
-First things first, you'll need to [download it here.](https://vibez.dev/) Once you've done that, you'll need to open the file and publish to your group as a new game. Afterwards you're ready to customize it to your liking.
+First things first, you'll need to [download it here.](https://www.google.com/) Once you've done that, you'll need to open the file and publish to your group as a new game. Afterwards you're ready to customize it to your liking.
 
 ### Important
 To use the application center, you need to ensure you publish the game and that you have `Allow Third Party Teleports` enabled.
@@ -26,6 +30,8 @@ The other options are optional and can be customized to your liking.
     -- https://itsrune.github.io/RoTime/docs/Timezones#defaults
 }
 ```
+
+<img src="/VibezAPI/appcenter_1.png"></img>
 
 ## UI Customization
 **NOTE:** All UI Customization is done within the `UI` table.
@@ -155,6 +161,8 @@ This category is where you'll be able to make each application unique.
 ### Short Answer **\***
 Short answer questions allow you to ask a question and have the user type in their answer into a small box.
 
+<img src="/VibezAPI/appcenter_2.png"></img>
+
 ```lua
 {
     Question = "What is the capital of the United States?", -- The question you want to ask
@@ -167,6 +175,8 @@ Short answer questions allow you to ask a question and have the user type in the
 
 ### Long Answer **\***
 Long answer questions are similar to short answer questions, but allow the user to type in a longer response.
+
+<img src="/VibezAPI/appcenter_3.png"></img>
 
 ```lua
 {
@@ -182,6 +192,8 @@ Long answer questions are similar to short answer questions, but allow the user 
 Multiple choice questions are the most common type of question.
 They allow you to provide a question and multiple answers for the user to choose from.
 You can also specify the correct answer.
+
+<img src="/VibezAPI/appcenter_4.png"></img>
 
 ```lua
 {
@@ -202,7 +214,7 @@ You can also specify the correct answer.
                 isCorrect = false, -- Whether or not this is the correct answer
             },
             {
-                Text = "20", -- The text that will be displayed on the button
+                Text = "30", -- The text that will be displayed on the button
                 isCorrect = false, -- Whether or not this is the correct answer
             }
         }
@@ -213,6 +225,8 @@ You can also specify the correct answer.
 #### Yes or No
 Behind the scenes, yes or no questions are just multiple choice questions with only two options.
 You can use the same format as multiple choice questions to create a yes or no question.
+
+<img src="/VibezAPI/appcenter_5.png"></img>
 
 ```lua
 {
@@ -237,6 +251,8 @@ You can use the same format as multiple choice questions to create a yes or no q
 ### Multiple Select
 Multiple select questions are similar to multiple choice questions, but allow the user to select multiple answers.
 
+<img src="/VibezAPI/appcenter_6.png"></img>
+
 ```lua
 {
     Question = "Which of the following are colors?", -- The question you want to ask
@@ -257,7 +273,7 @@ Multiple select questions are similar to multiple choice questions, but allow th
                 isCorrect = false, -- Whether or not this is the correct answer
             },
             {
-                Text = "Red", -- The text that will be displayed on the button
+                Text = "Blue", -- The text that will be displayed on the button
                 isCorrect = true, -- Whether or not this is the correct answer
             },
         }
@@ -267,6 +283,8 @@ Multiple select questions are similar to multiple choice questions, but allow th
 
 ### Scale
 Scale questions allow you to ask a question and have the user select a value between a minimum and maximum value.
+
+<img src="/VibezAPI/appcenter_7.png"></img>
 
 ```lua
 {
@@ -284,6 +302,8 @@ Scale questions allow you to ask a question and have the user select a value bet
 ### Submit
 This isn't a question type, but if you'd like to customize the submit text you can do so by adding your own at the end of your application.
 If none is supplied, the default text is shown below and will be added automatically.
+
+<img src="/VibezAPI/appcenter_8.png"></img>
 
 ```lua
 {
