--- a/docs/Centers/Application Center.mdx
+++ b/docs/Centers/Application Center.mdx
@@ -31,7 +31,7 @@ The other options are optional and can be customized to your liking.
 }
 ```
 
-<img src="/VibezAPI/appcenter_1.png"></img>
+<img src="/VibezAPI/appcenter_1.PNG"></img>
 
 ## UI Customization
 **NOTE:** All UI Customization is done within the `UI` table.
@@ -161,7 +161,7 @@ This category is where you'll be able to make each application unique.
 ### Short Answer **\***
 Short answer questions allow you to ask a question and have the user type in their answer into a small box.
 
-<img src="/VibezAPI/appcenter_2.png"></img>
+<img src="/VibezAPI/appcenter_2.PNG"></img>
 
 ```lua
 {
@@ -176,7 +176,7 @@ Short answer questions allow you to ask a question and have the user type in the
 ### Long Answer **\***
 Long answer questions are similar to short answer questions, but allow the user to type in a longer response.
 
-<img src="/VibezAPI/appcenter_3.png"></img>
+<img src="/VibezAPI/appcenter_3.PNG"></img>
 
 ```lua
 {
@@ -193,7 +193,7 @@ Multiple choice questions are the most common type of question.
 They allow you to provide a question and multiple answers for the user to choose from.
 You can also specify the correct answer.
 
-<img src="/VibezAPI/appcenter_4.png"></img>
+<img src="/VibezAPI/appcenter_4.PNG"></img>
 
 ```lua
 {
@@ -226,7 +226,7 @@ You can also specify the correct answer.
 Behind the scenes, yes or no questions are just multiple choice questions with only two options.
 You can use the same format as multiple choice questions to create a yes or no question.
 
-<img src="/VibezAPI/appcenter_5.png"></img>
+<img src="/VibezAPI/appcenter_5.PNG"></img>
 
 ```lua
 {
@@ -251,7 +251,7 @@ You can use the same format as multiple choice questions to create a yes or no q
 ### Multiple Select
 Multiple select questions are similar to multiple choice questions, but allow the user to select multiple answers.
 
-<img src="/VibezAPI/appcenter_6.png"></img>
+<img src="/VibezAPI/appcenter_6.PNG"></img>
 
 ```lua
 {
@@ -284,7 +284,7 @@ Multiple select questions are similar to multiple choice questions, but allow th
 ### Scale
 Scale questions allow you to ask a question and have the user select a value between a minimum and maximum value.
 
-<img src="/VibezAPI/appcenter_7.png"></img>
+<img src="/VibezAPI/appcenter_7.PNG"></img>
 
 ```lua
 {
@@ -303,7 +303,7 @@ Scale questions allow you to ask a question and have the user select a value bet
 This isn't a question type, but if you'd like to customize the submit text you can do so by adding your own at the end of your application.
 If none is supplied, the default text is shown below and will be added automatically.
 
-<img src="/VibezAPI/appcenter_8.png"></img>
+<img src="/VibezAPI/appcenter_8.PNG"></img>
 
 ```lua
 {
