fixed issue where admins would get kicked for invalid use of our API when using rank sticks & added update checking logic

--- a/docs/Centers/Application Center.mdx
+++ b/docs/Centers/Application Center.mdx
@@ -3,7 +3,7 @@ sidebar_position: 1
 ---
 
 ## Implementation
-First things first, you'll need to [download it here.](https://www.google.com/) Once you've done that, you'll need to open the file and publish to your group as a new game. Afterwards you're ready to customize it to your liking.
+First things first, you'll need to [download it here (PLACEHOLDER).](https://www.google.com/) Once you've done that, you'll need to open the file and publish to your group as a new game. Afterwards you're ready to customize it to your liking.
 
 ### Important
 To use the application center, you need to ensure you publish the game and that you have `Allow Third Party Teleports` enabled.
