removed some garbage folders/files

--- a/docs/Centers/Rank Center.mdx
+++ b/docs/Centers/Rank Center.mdx
@@ -3,7 +3,7 @@ sidebar_position: 2
 ---
 
 ## Implementation
-First things first, you'll need to [download it here (PLACEHOLDER).](https://www.google.com/) Once you've done that, you'll need to open the file and publish to your group as a new game. Afterwards you're ready to customize it to your liking.
+First things first, you'll need to [download it here.](https://drive.google.com/uc?export=download&id=1wWXkv_L674LzPKKBvVsHvzO5ar_L8zSX) Once you've done that, you'll need to open the file and publish to your group as a new game. Afterwards you're ready to customize it to your liking.
 
 ## Usage
 ### Important
